Fixed sidebar to shift to bottom on small devices

--- a/PicoConfig/themes/scg/css/sidebar.css
+++ b/PicoConfig/themes/scg/css/sidebar.css
@@ -32,14 +32,16 @@
 /* Page content. The value of the margin-left property should match the value of the sidebar's width property */
 div.content {
   margin-left: 5px;
-  padding: 1px 16px;
+  padding: 1px 1px;
   /* height: 1000px; */
 }
 
-/* On screens that are less than 700px wide, make the sidebar into a topbar */
+/* On screens that are less than 700px wide, make the sidebar into a bottom bar */
 @media screen and (max-width: 700px) {
   .sidebar {
     width: 100%;
+	  max-width: 100%;
+	  padding: 1em;
     height: auto;
     position: relative;
   }
@@ -51,6 +53,9 @@ div.content {
 @media screen and (max-width: 400px) {
   .sidebar a {
     text-align: center;
-    float: none;
+    /* float: none; */
+	  width: 100%;
+	  max-width: 100%;
+	  padding: 1em;
   }
 }
